# quadrotor_mpc

./: CMakeLists.txt  README.md  package.xml
include/: disturbance_observer.h  mpc_ros_application.h  mpc_tracking.h  mpc_wrapper.h  plot.h  px4_interface.h
mpc_controller/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  quadrotor_acado_export  quadrotor_rsmpc.cpp
mpc_controller/quadrotor_mpc_export/: acado_common.h  acado_integrator.c  acado_solver.c
src/: disturbance_observer.cpp  mpc_ros_application.cpp  mpc_tracking.cpp  mpc_wrapper.cpp  px4_interface.cpp  tracking_node.cpp
